src/objects/Sick_Leave__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Staffer__c</fullName>
        <label>Staffer</label>
        <referenceTo>Staffer__c</referenceTo>
        <relationshipLabel>Sick Leave</relationshipLabel>
        <relationshipName>Sick_Leave</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Sick Leave</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Staffer__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Sick Leave Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sick Leave</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>